cluster/apps/dev/renovate-operator/app/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name renovate-operator
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/icon: renovate.svg
    gethomepage.dev/name: Renovate Operator
    gethomepage.dev/group: Dev
    gethomepage.dev/app: *name
spec:
  # noinspection KubernetesUnknownValues
  hostnames: [ 'renovate.${DOMAIN_NAME}' ]
  parentRefs:
    - name: envoy
      namespace: envoy-system

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: '/'
      backendRefs:
        - name: *name
          port: 8081

    - matches:
        - path:
            type: PathPrefix
            value: '/webhook'
      backendRefs:
        - name: *name
          port: 8082
